--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -141,13 +141,13 @@ section.s4 {
   padding: 2.5em 0;
   color: white;
   background-color: crimson;
+  background-color: darkorange;
 }
 .desc-map {
   width: 40%;
 }
 .desc-map > h1 {
   font-size: 3.8em;
-  /* background: blue; */
   font-weight: bold;
   padding-bottom: 0.6em;
 }
