--- a/views/product-catalog.html
+++ b/views/product-catalog.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet">
   <link rel="stylesheet" href="../stylesheets/bootsandcats.css">
   <link rel="stylesheet" href="../stylesheets/nav.css">
   <link rel="stylesheet" href="../stylesheets/product-catalog.css ">
 </head>
+
 <body>
-  <nav id="nav" class="second-nav">
+  <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
         <a href="#"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
@@ -38,114 +40,76 @@
   <section class="s1">
     <div class="product-row">
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
-
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
-
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
     </div>
 
     <div class="product-row">
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
-
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
-
       <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
+        <a class="img-link" href="#" style="background-image:url(../res/images/coffee-bean/coffee-bean-1.jpg)"></a>
         <p>Kopi Bean</p>
         <p>Fine selected bean by kuffee</p>
         <p>Rp. 90,000</p>
         <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson">Add to Cart</a>
+          <a href="http://" class="btn btn-crimson-hollow ">+ Wishlist</a>
         </div>
       </div>
     </div>
-
-    <div class="product-row">
-      <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
-        <p>Kopi Bean</p>
-        <p>Fine selected bean by kuffee</p>
-        <p>Rp. 90,000</p>
-        <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
-        </div>
-      </div>
-
-      <div class="product-card">
-        <div class="img-card">
-          <img src="../res/images/coffee-bean/coffee-bean-2.jpg" alt="">
-        </div>
-        <p>Kopi Bean</p>
-        <p>Fine selected bean by kuffee</p>
-        <p>Rp. 90,000</p>
-        <div class="product-btn-container">
-          <a href="http://" class="btn btn-crimson ">View details</a>
-          <a href="http://" class="btn btn-crimson-hollow ">Add to Cart</a>
-        </div>
-      </div>
-    </div>
+    
   </section>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="../scripts/nav.js"></script>
+  <script>
+  </script>
 </body>
+
 </html>
