--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -100,7 +100,7 @@
   </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="../scripts/nav.js"></script>
+  <script src="../scripts/nav-white.js"></script>
   <script>
   </script>
 </body>
