--- a/stylesheets/category.css
+++ b/stylesheets/category.css
@@ -1,124 +1,44 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
   }
 
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 body {
-  width: 60%;
-  margin: auto;
+  width: 100%;
   font-family: 'Raleway', sans-serif;
+  background-color: white;
 }
-nav {
-  padding-bottom: 20px;
-}
-.nav-space {
-  height: 70px;
-  background-color: gray;
-}
-main {
-  background-color: none;
-}
-.product{
-  border-bottom: 1px solid black;
-  height: 320px;
-}
-.image > img {
-  width: 300px;
-  height: 300px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 10px;
-  float: left;
-}
-.info {
-  float: left;
-  width: 400px;
-  padding-top: 30px;
-}
-.info span{
-  display: block;
-  width: 160px;
+.bg-dot {
+  margin-top: -35px;
+  width: auto;
   height: 30px;
   background-color: none;
   text-align: center;
-  margin-top: 30px;
-  margin-left: 50px;
-  padding-top: 10px;
-  border-radius: 20px;
 }
-.info p{
-  font-size: 18px;
-}
-.info a {
-  display: block;
-  color: white;
-  font-size: 15px;
-  text-align: center;
-  text-decoration: none;
-  border: 1px solid none;
-  background-color: gray;
-  padding: 13px 2px;
-  margin-bottom: 5px;
-  border-radius: 40px;
-}
-a:hover, a:active {
-  background-color: blue;
-}
-
-.mySlides {display: none}
-.mySlides > img {
-  width: 100%;
-  margin: auto;
-  vertical-align: middle;}
-
-/* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  width: 96%;
   position: relative;
   margin: auto;
+  border: 0 solid none;
+  border-radius: 100px;
 }
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+/* Hide the images by default */
+.mySlides {
+    display: none;
 }
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: 2px 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active, .dot:hover {
   background-color: #717171;
 }
@@ -141,7 +61,46 @@ a:hover, a:active {
   to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+main {
+  width: 80%;
+  margin: auto;
+}
+.category-product {
+  width: 80%;
+  margin: auto;
+  background: white;
+  filter: drop-shadow(0.5mm 2mm 2mm rgba(0, 0, 0, 0.25));
+  padding-bottom: 55px;
+  border-radius: 10px;
+}
+.gambar img{
+  border: 1px solid none;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
+}
+.product {
+  display: inline-block;
+  padding: 6px 30px;
+  font-size: 30px;
+  font-weight: 600;
+  float: left;
+}
+.button-link a {
+  display: inline-block;
+  color: crimson;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid crimson;
+  border-radius: 5px;
+  padding: 13px 2px;
+  margin-right: 30px;
+  float: right;
+  font-weight: bold;
+}
+a:hover, a:active {
+  color: white;
+  background: red;
+  border: 2px solid red;
 }
