--- a/views/category.html
+++ b/views/category.html
@@ -5,132 +5,148 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet">
+  <link rel="stylesheet" href="../stylesheets/bootsandcats.css">
+  <link rel="stylesheet" href="../stylesheets/nav.css">
+  <link rel="stylesheet" href="../stylesheets/footer.css">
   <link rel="stylesheet" href="../stylesheets/category.css">
 </head>
 <body>
-  <nav>
-    <div class="nav-space">
-      
+  <nav id="nav" class="first-nav">
+    <div class="nav-container">
+      <div class="nav-left">
+        <a href="#"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
+      </div>
+      <div class="nav-right">
+        <a href="views/category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
+        <a href="#"><img src="../res/images/icons/heart-white.png" alt=""> Wishlist</a>
+        <a href="#"><img src="../res/images/icons/cart-white.png" alt=""> My Cart</a>
+        <button id="btn_login" class="btn btn-medium btn-blue" type="button">Login</button>
+        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button">Sign Up</button>
+      </div>
     </div>
-  </nav> 
-  <div class="slideshow-container">
+  </nav>
 
+  <div class="slideshow-container">
     <div class="mySlides fade">
-      <img src="../res/images/slideshow/slideshow-1.jpg">
+      <img src="../res/images/slideshow/slideshow-1.jpg" style="width:100%">
     </div>
-      
     <div class="mySlides fade">
-      <img src="../res/images/slideshow/slideshow-2.jpg">
+      <img src="../res/images/slideshow/slideshow-2.jpg" style="width:100%">
     </div>
-      
     <div class="mySlides fade">
-      <img src="../res/images/slideshow/slideshow-3.jpg">
+      <img src="../res/images/slideshow/slideshow-3.jpg" style="width:100%">
     </div>
-      
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      
+    <div class="bg-dot">
+        <span class="dot" onclick="currentSlide(1)"></span> 
+        <span class="dot" onclick="currentSlide(2)"></span> 
+        <span class="dot" onclick="currentSlide(3)"></span> 
+    </div>
   </div>
   <br>
-      
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span> 
-    <span class="dot" onclick="currentSlide(2)"></span> 
-    <span class="dot" onclick="currentSlide(3)"></span> 
-  </div>
+  <br>
   <main>
-    <div class="product">
-      <div class="image">
-        <img
-          src="../res/images/coffee-bean/coffee-bean.jpg">
+    <div class="category-product">
+      <div class="gambar">
+        <img src="../res/images/coffee-bean/coffee-bean-0.jpg">
       </div>
-      <div class="info">
-        <h1>Coffee Beans</h1>
-        <br>
-        <p>
-          Coffee beans are a rich source of biologically active compounds such as caffeine, chlorogenic acids, nicotinic acid, trigonelline, cafestol, and kahweol, which have significant potential as antioxidants.
-        </p>
-        <span>
-          <a href="#">Click here to view all</a>
-        </span>
+      <div class="product">
+        <span>COFFEE BEAN</span>
+      </div>
+      <div class="button-link">
+        <a href="#">Click here to view all</a>
       </div>
     </div>
     <br>
-    <div class="product">
-      <div class="image">
-        <img src="../res/images/coffee-grinder/coffee-grinder.jpg">
+    <div class="category-product">
+      <div class="gambar">
+        <img src="../res/images/coffee-grinder/coffee-grinder-0.jpg">
       </div>
-      <div class="info">
-        <h1>Coffee Grinder</h1>
-        <br>
-        <p>
-          Grind your coffee to the smooth, for the flavor and aroma of the resulting coffee drinks are absolutely delicious and very different from regular coffee drinks.
-        </p>
-        <span>
-          <a href="#">Click here to view all</a>
-        </span>
+      <div class="product">
+        <span>COFFEE GRINDER</span>
+      </div>
+      <div class="button-link">
+        <a href="#">Click here to view all</a>
       </div>
     </div>
     <br>
-    <div class="product">
-      <div class="image">
-        <img src="../res/images/coffee-maker/coffee-maker-front.jpg">
+    <div class="category-product">
+      <div class="gambar">
+        <img src="../res/images/coffee-maker/coffee-maker-0.jpg">
       </div>
-      <div class="info">
-        <h1>Coffee Maker</h1>
-        <br>
-        <p>
-          Coffee makers are cooking appliances used to brew coffee, coffee grounds are placed in a metal filter inside a funnel, which is set over a glass pot.
-        </p>
-        <span>
-          <a href="#">Click here to view all</a>
-        </span>
+      <div class="product">
+        <span>COFFEE MAKER</span>
+      </div>
+      <div class="button-link">
+        <a href="#">Click here to view all</a>
       </div>
     </div>
     <br>
-    <div class="product">
-      <div class="image">
-        <img src="../res/images/coffee-tumbler/coffee-tumbler-front.jpg">
+    <div class="category-product">
+      <div class="gambar">
+        <img src="../res/images/coffee-tumbler/coffee-tumbler-0.jpg">
       </div>
-      <div class="info">
-        <h1>Coffee Tumblers</h1>
-        <br>
-        <p>
-          Thumbler is a special container for coffee used for traveling or traveling later increasingly in demand by coffee enthusiasts. Suitable to help you bring hot coffee on the go.
-        </p>
-        <span>
-          <a href="#">Click here to view all</a>
-        </span>
+      <div class="product">
+        <span>COFFEE TUMBLERS</span>
+      </div>
+      <div class="button-link">
+        <a href="#">Click here to view all</a>
       </div>
     </div>
   </main>
 
+
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="./scripts/nav.js"></script>
+
   <script>
     var slideIndex = 1;
     showSlides(slideIndex);
-      
+
+    // Next/previous controls
     function plusSlides(n) {
       showSlides(slideIndex += n);
     }
-      
+
+    // Thumbnail image controls
     function currentSlide(n) {
       showSlides(slideIndex = n);
     }
-      
+
     function showSlides(n) {
       var i;
       var slides = document.getElementsByClassName("mySlides");
       var dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}    
+      if (n > slides.length) {slideIndex = 1} 
       if (n < 1) {slideIndex = slides.length}
       for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";  
+          slides[i].style.display = "none"; 
       }
       for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
+          dots[i].className = dots[i].className.replace(" active", "");
       }
-      slides[slideIndex-1].style.display = "block";  
+      slides[slideIndex-1].style.display = "block"; 
       dots[slideIndex-1].className += " active";
+    }
+
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none"; 
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) {slideIndex = 1} 
+        slides[slideIndex-1].style.display = "block"; 
+        setTimeout(showSlides, 7000); // Change image every 2 seconds
     }
   </script>
 </body>
