--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -12,21 +12,40 @@
 /* div-login-form */
 #div_login_form {
   width: 400px;
-  height: 350px;
+  height: 390px;
   margin: auto;
   background: white;
   border-radius: 10px;
 }
-#div_login_form > header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30%;
+#div_signup_form > header {
+  height: 35%;
   background: cornflowerblue;
+  background-image: linear-gradient(rgba(100, 150, 190, 0.6), rgba(100, 150, 190, 0.6)),
+                    url(../res/images/wallpaper/coffee-brewer.jpg);
+              
+  background-size: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
+#div_signup_form > header > .div-closer {
+  text-align: right;
+  padding-top: 0.5em;
+  padding-right: 0.3em;
+  padding-bottom: 0.8em;
+}
+#div_signup_form > header > .div-closer > img {
+  width: 14px;
+  height: 14px;
+  opacity: 0.75;
+  cursor: pointer;
+}
+#div_signup_form > header > .div-closer > img:hover {
+  opacity: 1;
+}
 #div_login_form > header > h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Chela One";
   font-size: 3em;
   color: white;
@@ -58,7 +77,7 @@
   cursor: pointer;
 }
 
-#div_login_form form.touched input[type="email"] {
+#div_login_form form input[type="email"] {
   margin-top: 2em;
   background-image: url(../res/images/icons/email.png);
   background-size: 27px;
@@ -71,7 +90,7 @@
   border: 2px solid cornflowerblue;
   transition: 0.3s;
 }
-#div_login_form form input[type="email"]:invalid {
+#div_login_form form.touched input[type="email"]:invalid {
   background-image: url(../res/images/icons/email-red.png);
   border: 2px solid crimson;
   transition: 0.3s;
@@ -96,6 +115,120 @@
 }
 
 #div_login_form form button {
+  display: block;
+  margin: auto;
+  width: 45%;
+}
+
+
+
+
+/* div-signup-form */
+#div_signup_form {
+  width: 400px;
+  height: 390px;
+  margin: auto;
+  background: white;
+  border-radius: 10px;
+}
+#div_signup_form > header {
+  height: 35%;
+  background: cornflowerblue;
+  background-image: linear-gradient(rgba(255, 140, 0, 0.6), rgba(255, 140, 0, 0.6)),
+                    url(../res/images/wallpaper/coffee-brewer.jpg);
+              
+  background-size: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+#div_signup_form > header > .div-closer {
+  text-align: right;
+  padding-top: 0.5em;
+  padding-right: 0.3em;
+  padding-bottom: 0.8em;
+}
+#div_signup_form > header > .div-closer > img {
+  width: 14px;
+  height: 14px;
+  opacity: 0.75;
+  cursor: pointer;
+}
+#div_signup_form > header > .div-closer > img:hover {
+  opacity: 1;
+}
+#div_signup_form > header > h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Chela One";
+  font-size: 3em;
+  color: white;
+}
+#div_signup_form > header img {
+  width: 45px;
+  height: 45px;
+  padding-right: 0.3em;
+}
+#div_signup_form form input {
+  display: block;
+  margin: 1.6em auto;
+  width: 200px;
+  height: 35px;
+  border: none;
+  border: 2px solid rgb(200, 200, 200);
+  border-radius: 5px;
+  padding: 0 2.5em 0 3.5em;
+}
+#div_signup_form p {
+  text-align: center;
+  color: black;
+  margin-top: 1.6em;
+  transition: 0.3s;
+  font-size: 0.9em;
+}
+#div_signup_form p span {
+  color: darkorange;
+  cursor: pointer;
+}
+
+#div_signup_form form input[type="email"] {
+  margin-top: 2em;
+  background-image: url(../res/images/icons/email.png);
+  background-size: 27px;
+  background-repeat: no-repeat;
+  background-position: 10px 9px;
+  transition: 0.3s;
+}
+#div_signup_form form input[type="email"]:focus {
+  background-image: url(../res/images/icons/email-orange.png);
+  border: 2px solid darkorange;
+  transition: 0.3s;
+}
+#div_signup_form form.touched input[type="email"]:invalid {
+  background-image: url(../res/images/icons/email-red.png);
+  border: 2px solid crimson;
+  transition: 0.3s;
+}
+
+#div_signup_form form input[type="password"] {
+  background-image: url(../res/images/icons/password.png);
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: 12px 5px;
+  transition: 0.3s;
+}
+#div_signup_form form input[type="password"]:focus {
+  background-image: url(../res/images/icons/password-orange.png);
+  border: 2px solid darkorange;
+  transition: 0.3s;
+}
+#div_signup_form form.touched input[type="password"]:invalid {
+  background-image: url(../res/images/icons/password-red.png);
+  border: 2px solid crimson;
+  transition: 0.3s;
+}
+
+#div_signup_form form button {
   display: block;
   margin: auto;
   width: 45%;
