--- a/stylesheets/category.css
+++ b/stylesheets/category.css
@@ -18,7 +18,7 @@ body {
   text-align: center;
 }
 .slideshow-container {
-  width: 96%;
+  width: 100%;
   position: relative;
   margin: auto;
   border: 0 solid none;
@@ -68,7 +68,7 @@ main {
 .category-product {
   width: 80%;
   margin: auto;
-  background: white;
+  background: whitesmoke;
   filter: drop-shadow(0.5mm 2mm 2mm rgba(0, 0, 0, 0.25));
   padding-bottom: 55px;
   border-radius: 10px;
@@ -94,13 +94,13 @@ main {
   text-decoration: none;
   border: 2px solid crimson;
   border-radius: 5px;
-  padding: 13px 2px;
+  padding: 13px 10px;
   margin-right: 30px;
   float: right;
   font-weight: bold;
 }
-a:hover, a:active {
+.button-link a:hover,.button-link a:active {
   color: white;
-  background: red;
+  background: Crimson;
   border: 2px solid red;
 }
