--- a/views/category.html
+++ b/views/category.html
@@ -54,7 +54,7 @@
         <span>COFFEE BEAN</span>
       </div>
       <div class="button-link">
-        <a href="#">Click here to view all</a>
+        <a href="#">View All</a>
       </div>
     </div>
     <br>
@@ -66,7 +66,7 @@
         <span>COFFEE GRINDER</span>
       </div>
       <div class="button-link">
-        <a href="#">Click here to view all</a>
+        <a href="#">View All</a>
       </div>
     </div>
     <br>
@@ -78,7 +78,7 @@
         <span>COFFEE MAKER</span>
       </div>
       <div class="button-link">
-        <a href="#">Click here to view all</a>
+        <a href="#">View All</a>
       </div>
     </div>
     <br>
@@ -90,19 +90,17 @@
         <span>COFFEE TUMBLERS</span>
       </div>
       <div class="button-link">
-        <a href="#">Click here to view all</a>
+        <a href="#">View All</a>
       </div>
     </div>
   </main>
-
-
-
-
-
-
+  <br>
+  <div class="footer-bottom">
+    <p>Copyright &copy; 2018 UPH Stabat. All rights reserved.</p>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="./scripts/nav.js"></script>
+  <script src="../scripts/nav.js"></script>
 
   <script>
     var slideIndex = 1;
