--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -17,7 +17,7 @@
   background: white;
   border-radius: 10px;
 }
-#div_signup_form > header {
+#div_login_form > header {
   height: 35%;
   background: cornflowerblue;
   background-image: linear-gradient(rgba(100, 150, 190, 0.6), rgba(100, 150, 190, 0.6)),
@@ -27,19 +27,19 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-#div_signup_form > header > .div-closer {
+#div_login_form > header > .div-closer {
   text-align: right;
   padding-top: 0.5em;
   padding-right: 0.3em;
   padding-bottom: 0.8em;
 }
-#div_signup_form > header > .div-closer > img {
+#div_login_form > header > .div-closer > img {
   width: 14px;
   height: 14px;
   opacity: 0.75;
   cursor: pointer;
 }
-#div_signup_form > header > .div-closer > img:hover {
+#div_login_form > header > .div-closer > img:hover {
   opacity: 1;
 }
 #div_login_form > header > h1 {
@@ -126,7 +126,7 @@
 /* div-signup-form */
 #div_signup_form {
   width: 400px;
-  height: 390px;
+  height: 435px;
   margin: auto;
   background: white;
   border-radius: 10px;
@@ -171,7 +171,7 @@
 }
 #div_signup_form form input {
   display: block;
-  margin: 1.6em auto;
+  margin: 1.2em auto;
   width: 200px;
   height: 35px;
   border: none;
@@ -191,8 +191,20 @@
   cursor: pointer;
 }
 
+#div_signup_form form input[type="text"] {
+  background-image: url(../res/images/icons/user.png);
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position: 10px 5px;
+  transition: 0.3s;
+}
+#div_signup_form form input[type="text"]:focus {
+  background-image: url(../res/images/icons/user-orange.png);
+  border: 2px solid darkorange;
+  transition: 0.3s;
+}
+
 #div_signup_form form input[type="email"] {
-  margin-top: 2em;
   background-image: url(../res/images/icons/email.png);
   background-size: 27px;
   background-repeat: no-repeat;
