--- a/stylesheets/nav.css
+++ b/stylesheets/nav.css
@@ -82,3 +82,7 @@ nav > div {
   display: inline-block;
   margin-left: 0.8em;
 }
+#span_user, #btn_logout {
+  display: inline-block;
+  margin-left: 0.8em;
+}
