--- a/views/category.html
+++ b/views/category.html
@@ -15,7 +15,7 @@
   <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
-        <a href="#"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
+        <a href="../index.html"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
       </div>
       <div class="nav-right">
         <a href="views/category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
@@ -101,8 +101,10 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="./scripts/nav.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="../scripts/nav.js"></script>
+  <script src="../scripts/form.js"></script>
 
   <script>
     var slideIndex = 1;
