--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -8,26 +8,60 @@
   <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet"> 
   <link rel="stylesheet" href="../stylesheets/bootsandcats.css">
   <link rel="stylesheet" href="../stylesheets/nav.css">
+  <link rel="stylesheet" href="../stylesheets/form.css">
   <link rel="stylesheet" href="../stylesheets/product-detail.css ">
 </head>
 <body>
   <nav id="nav" class="second-nav">
     <div class="nav-container">
       <div class="nav-left">
-        <a href="#"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
+        <a href="index.html"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
       </div>
       <div class="nav-right">
-        <a href="views/category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
-        <a href="#"><img src="../res/images/icons/heart-white.png" alt=""> Wishlist</a>
-        <a href="#"><img src="../res/images/icons/cart-white.png" alt=""> My Cart</a>
-        <button id="btn_login" class="btn btn-medium btn-white" type="button">Login</button>
-        <button id="btn_signup" class="btn btn-medium btn-white-hollow" type="button">Sign Up</button>
+        <a href="./category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
+        <a id="link_wishlist" href="./wishlist.html"><img src="../res/images/icons/heart-white.png" alt=""> Wishlist</a>
+        <a id="link_mycart" href="./my-cart.html"><img src="../res/images/icons/cart-white.png" alt=""> My Cart</a>
+        <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
+        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
+        <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
+        <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
       </div>
     </div>
   </nav>
+  <div id="form_platform" style="display:none;">
+    <div id="div_login_form" style="display:none;">
+      <header>
+        <div class="div-closer">
+          <img class="closer" src="../res/images/icons/close-slim.png">
+        </div>
+        <h1><img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
+      </header>
+      <form action="">
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit" class="btn btn-blue btn-medium">LOGIN</button>
+        <p>Don't have an account? <span id="btn_signup_first">Sign Up!</span></p>
+      </form>
+    </div>
+    <div id="div_signup_form" style="display:none;">
+      <header>
+        <div class="div-closer">
+          <img class="closer" src="../res/images/icons/close-slim.png">
+        </div>
+        <h1><img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
+      </header>
+      <form action="">
+        <input type="text" placeholder="Username" required>
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit" class="btn btn-orange btn-medium">SIGN UP</button>
+        <p>Already have an account? <span id="btn_login_first">Login!</span></p>
+      </form>
+    </div>
+  </div>
 
   <section class="detail-wrapper">
-    <div class="detail-box">
+    <!-- <div class="detail-box">
       <div class="div-img" style="background-image:url(../res/images/coffee-bean/coffee-bean-2.jpg)"></div>
       <div class="div-right">
         <div class="div-desc">
@@ -43,11 +77,48 @@
           <a href="http://" class="btn btn-crimson-hollow">+ Wishlist</a>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="../scripts/doublescore.js"></script>
+  <script src="../scripts/ejs.min.js"></script>
+  <script src="../scripts/nav.js"></script>
+  <script src="../scripts/form.js"></script>
+  <script src="../scripts/coffee-product-db.js"></script>
+  <script src="../scripts/db-reader.js"></script>
   <script>
+    nav.unbindScroll();
+    let productID = parseInt(__.getParameterByName('id', window.location));
+
+    let db = new DBReader(CoffeeProductDB);
+    let selectedDocument = db.getById(productID);
+    let documents = db.getByCategory(selectedDocument.category);
+
+    (function renderProductDetail(document) {
+      let $detailWrapper = $('.detail-wrapper');
+      let renderDetail = ejs.compile(`
+        <div class="detail-box">
+          <div class="div-img" style="background-image:url(../res/images/<%= doc.imageUrl %>)"></div>
+          <div class="div-right">
+            <div class="div-desc">
+              <h1 class="desc-title"><%= doc.name %></h1>
+              <p class="desc-category"><%= doc.shortDesc %></p>
+              <p class="desc-description"><%= doc.longDesc %></p>
+              <p class="desc-price">
+                Rp. <%= doc.price %>
+              </p>
+            </div>
+            <div class="div-action">
+              <a href="#" class="btn btn-crimson btn-add-cart">Add to Cart</a>
+              <a href="#" class="btn btn-crimson-hollow btn-add-wishlist">+ Wishlist</a>
+            </div>
+          </div>
+        </div>
+      `);
+      $detailWrapper.append($(renderDetail({doc: document})));
+    })(selectedDocument);
 
   </script>
 </body>
