--- a/stylesheets/wishlist.css
+++ b/stylesheets/wishlist.css
@@ -39,6 +39,7 @@ body {
 section.s1 {
   width: 55%;
   margin: 2em auto;
+  padding-bottom: 2em;
 }
 .wish-box {
   margin-top: 3em;
@@ -64,6 +65,11 @@ section.s1 {
 }
 .wish-box .div-middle .wish-title {
   padding-bottom: 0.4em;
+  display: block;
+  text-decoration: none;
+  font-weight: bold;
+  color: crimson;
+  font-size: 1.8em;
 }
 
 .wish-box .div-right {
@@ -95,6 +101,6 @@ section.s1 {
   color: crimson;
 }
 
-.wish-box .div-right .wish-add-cart {
+.wish-box .div-right .btn-add-cart {
   margin-right: 0.5em;
 }
